# monodromy

./: .gitignore  Makefile  flake.nix  pyproject.toml
.github/workflows/: build.yaml
src/monodromy/backend/: lrs.py
src/tests/: test_coverage.py
