[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monodromy"
version = "0.0.1"
description = "Computations in the monodromy polytope for quantum gate sets"
authors = [{ name = "Eric Peterson", email = "Eric.Peterson@ibm.com" }]

requires-python = ">=3.9"

dependencies = ["pytest", "scipy", "qiskit", "retworkx", "numpy", "cvxopt"]

classifiers = ["Private :: Do Not Upload"]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "ipykernel",
    "pre-commit",
    "pylatexenc",
    "weylchamber",
    "Py-BOBYQA",
    "transpile_benchy",
    "hatchling",
]
format = [
    "pre-commit",
    "black[jupyter]",
    "isort",
    "tomli",
    "pydocstyle",
    "ruff",
    "docformatter[tomli]",
]
test = ["pytest", "ddt"]

[tool.uv.sources]
transpile_benchy = { git = "https://github.com/evmckinney9/transpile_benchy" }

[tool.ruff]
target-version = "py39"
fix = true

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.isort]
profile = "black"

# It seems that hatch always traverses the entire project root.
# Simply limit it to our wanted package.
[tool.hatch.build.targets.wheel]
packages = ["src/monodromy"]

[tool.hatch.build.targets.wheel.force-include]
"src/monodromy/vendor/lrslib/bin/" = "src/monodromy/vendor/lrslib/bin"
